--- a/front/templates/ovirt_data_center_list.html
+++ b/front/templates/ovirt_data_center_list.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <title>oVirt storage domain list</title>
+        <title>oVirt data center list</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.dataTables.min.css') }}">
 
@@ -13,17 +13,12 @@
     </head>
     <body>
         <div class="container">
-            <table id="ovirt_storage_domain_list" class="display">
+            <table id="ovirt_data_center_list" class="display">
                 <thead>
                     <tr>
                         <th>ID</th>
                         <th>name</th>
                         <th>engine</th>
-                        <th>space_available</th>
-                        <th>space_used</th>
-                        <th>space_committed</th>
-                        <th>space_total</th>
-                        <th>space_overprovisioning</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -32,11 +27,6 @@
                         <th>{{ item.ID }}</th>
                         <th>{{ item.name }}</th>
                         <th>{{ item.engine }}</th>    
-                        <th>{{ item.space_available }}</th>
-                        <th>{{ item.space_used }}</th>
-                        <th>{{ item.space_committed }}</th>
-                        <th>{{ item.space_total }}</th>
-                        <th>{{ item.space_overprovisioning }}</th>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -44,7 +34,7 @@
         </div>
         <script>
             $(document).ready(function() {
-                $('#ovirt_storage_domain_list').DataTable({
+                $('#ovirt_data_center_list').DataTable({
                     initComplete: function() {
                         this.api().columns().every(function () {
                             var column = this;
