--- a/front/templates/ovirt_host_list.html
+++ b/front/templates/ovirt_host_list.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <title>oVirt VM list</title>
+        <title>oVirt host list</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.dataTables.min.css') }}">
 
