--- a/front/templates/ovirt_storage_domain_list.html
+++ b/front/templates/ovirt_storage_domain_list.html
@@ -7,6 +7,7 @@
         <title>oVirt storage domain list</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.dataTables.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
 
         <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/jquery.dataTables.min.js') }}"></script>
@@ -30,7 +31,7 @@
                 <tbody>
                     {% for item in data %}
                     <tr>
-                        <th>{{ item.ID }}</th>
+                        <th><a href="{{ item.href }}">{{ item.ID }}</a></th>
                         <th>{{ item.name }}</th>
                         <th>{{ item.engine }}</th>    
                         <th>{{ item.available }}</th>
