--- a/src/server/front/templates/ovirt_cluster_list.html
+++ b/src/server/front/templates/ovirt_cluster_list.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <title>oVirt data center list</title>
+        <title>oVirt cluster list</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.dataTables.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
@@ -15,20 +15,24 @@
     <body>
         {% include "header.html" %}
         <div class="container">
-            <table id="ovirt_data_center_list" class="display">
+            <table id="ovirt_cluster_list" class="display">
                 <thead>
                     <tr>
-                        <th>ID</th>
+                        <th>UUID</th>
                         <th>name</th>
-                        <th>engine</th>
+                        <th>engine</th>                        
+                        <th>data_center</th>
+                        <th>description</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for item in data %}
                     <tr>
-                        <th><a href="{{ item.href }}">{{ item.ID }}</a></th>
+                        <th><a href="{{ item.href }}">{{ item.UUID }}</a></th>
                         <th>{{ item.name }}</th>
-                        <th>{{ item.engine }}</th>
+                        <th>{{ item.engine }}</th>                        
+                        <th>{{ item.data_center }}</th>
+                        <th>{{ item.description }}</th>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -37,7 +41,7 @@
         {% include "footer.html" %}
         <script>
             $(document).ready(function() {
-                $('#ovirt_data_center_list').DataTable({
+                $('#ovirt_cluster_list').DataTable({
                     initComplete: function() {
                         this.api().columns().every(function () {
                             var column = this;
