--- a/src/server/front/templates/header.html
+++ b/src/server/front/templates/header.html
@@ -7,6 +7,7 @@
             <li><a href="/ovirt/cluster_list">Clusters</a></li>
             <li><a href="/ovirt/storage_domain_list">Storages</a></li>
             <li><a href="/ovirt/data_center_list">Data centers</a></li>
+            <li><a href="{{ url_for('view', model_name=model_name) }}">VMs</a></li>
         </ul>
     </nav>
 </header>
