--- a/src/server/front/templates/header.html
+++ b/src/server/front/templates/header.html
@@ -2,12 +2,11 @@
     <h1>Virt aggregator</h1>
     <nav>
         <ul>
-            <li><a href="/ovirt/vm_list">VMs</a></li>
-            <li><a href="/ovirt/host_list">Hosts</a></li>
-            <li><a href="/ovirt/cluster_list">Clusters</a></li>
-            <li><a href="/ovirt/storage_domain_list">Storages</a></li>
-            <li><a href="/ovirt/data_center_list">Data centers</a></li>
-            <li><a href="{{ url_for('view', model_name=model_name) }}">VMs</a></li>
+            <li><a href="{{ url_for('view', model_name='vms') }}">VMs</a></li>
+            <li><a href="{{ url_for('view', model_name='hosts') }}">Hosts</a></li>
+            <li><a href="{{ url_for('view', model_name='clusters') }}">Clusters</a></li>
+            <li><a href="{{ url_for('view', model_name='storages') }}">Storages</a></li>
+            <li><a href="{{ url_for('view', model_name='data_centers') }}">Data centers</a></li>
         </ul>
     </nav>
 </header>
