added per_page selection for pagination

--- a/src/server/front/templates/base.html
+++ b/src/server/front/templates/base.html
@@ -25,5 +25,6 @@
         {% endwith %}
         {% block content %}{% endblock %}
         {% include "footer.html" %}
+        {% block script %}{% endblock %}
     </body>
 </html>
