--- a/src/flask_aggregator/front/templates/view.html
+++ b/src/flask_aggregator/front/templates/view.html
@@ -56,6 +56,8 @@
         <option value="50">50</option>
         <option value="100">100</option>
     </select>
+    <label for="totalItems">Total items:</label>
+    <span id="totalItems">{{ total_items }}</span>
 </div>
 {% endblock %}
 
