--- a/src/flask_aggregator/front/templates/header.html
+++ b/src/flask_aggregator/front/templates/header.html
@@ -8,6 +8,7 @@
             <li><a href="{{ url_for('view', model_name='storages') }}">Storages</a></li>
             <li><a href="{{ url_for('view', model_name='data_centers') }}">Data centers</a></li>
             <li><a href="{{ url_for('view', model_name='backups') }}">Backups</a></li>
+            <li><a href="{{ url_for('view', model_name='elma_vms') }}">Elma backups</a></li>
         </ul>
     </nav>
 </header>
