--- a/src/flask_aggregator/front/templates/header.html
+++ b/src/flask_aggregator/front/templates/header.html
@@ -7,7 +7,7 @@
             <li><a href="{{ url_for('view', model_name='clusters') }}">Clusters</a></li>
             <li><a href="{{ url_for('view', model_name='storages') }}">Storages</a></li>
             <li><a href="{{ url_for('view', model_name='data_centers') }}">Data centers</a></li>
-            <li><a href="{{ url_for('view', model_name='backups_view') }}">Backups</a></li>
+            <li><a href="{{ url_for('view', model_name='backups') }}">Backups</a></li>
             <li><a href="{{ url_for('view', model_name='vms_to_be_backed_up_view') }}">Elma backups</a></li>
         </ul>
     </nav>
