--- a/src/flask_aggregator/front/templates/header.html
+++ b/src/flask_aggregator/front/templates/header.html
@@ -11,7 +11,7 @@
             <li><a href="{{ url_for('view', model_name='Backups') }}">All backups</a></li>
             <li><a href="{{ url_for('view', model_name='LatestBackup') }}">Latest Backups</a></li>
             <li><a href="{{ url_for('view', model_name='ToBeBackedUpVms') }}">Elma TODO backups</a></li>
-            <li><a href="{{ url_for('view', model_name='backups_tape') }}">Taped only backups</a></li>
+            <li><a href="{{ url_for('view', model_name='TapedOnlyVms') }}">Taped only backups</a></li>
         </ul>
     </nav>
 </header>
